# Investment-Forecasting

./: .gitignore  Agent.md  README.md  pyproject.toml
doc/: pre-research.md
repo/: AGENTS.md  ARCHITECTURE.md  CODE_INDEX.md  INDEX.md  PROJECT.md  ROADMAP.md  STATUS.md
repo/audits/: MODEL-OPTIMIZATION-CEO-REVIEW-2026-05-24.md  PRODUCT-EXPERIENCE-ACCEPTANCE.md  README-MVP-COMPLETION-2026-05-23.md  SCHEDULER_PIPELINE_DEFECTS_2026-05-27.md  TASK-098-CHECKLIST-TEST-COVERAGE-2026-05-28.md
repo/decisions/: ADR-001-mvp-local-first-akshare-sqlite.md  ADR-002-official-mcp-python-sdk.md  ADR-003-expert-committee-virtual-investing.md  ADR-004-local-phone-communication-adapters.md  ADR-005-jarvis-top-level-assistant.md  ADR-006-safe-inbound-phone-commands.md  ADR-007-jarvis-consumer-information-architecture.md  ADR-008-system-scheduled-codex-agent-runtime.md  ADR-009-system-owned-incremental-scheduler.md  ADR-010-model-applicability-shadow-routing.md
scripts/: restart_web.sh
tests/: test_advice.py  test_advice_scoring.py  test_agent_runtime.py  test_ai_providers.py  test_akshare_ingestion.py  test_backtest.py  test_calibration.py  test_capital_flow.py  test_classification.py  test_communication.py  test_daily_workflow.py  test_data_quality.py  test_db.py  test_expert_scoring.py  test_experts.py  test_features.py  test_fund_holdings.py  test_jarvis.py  test_macro.py  test_market.py  test_mcp_server.py  test_mcp_tools.py  test_model_validation.py  test_monitoring.py  test_news_evidence.py  test_portfolio.py  test_scheduler.py  test_tushare_provider.py  test_web_app.py
(+210 files in other folders)
