[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "investment-forecasting"
version = "0.1.0"
description = "Local-first investment research and forecasting assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "akshare>=1.17",
  "certifi>=2024.0",
  "mcp>=1.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=1.0",
]
tushare = [
  "tushare>=1.4",
]

[project.scripts]
investment-forecasting = "investment_forecasting.cli:main"
investment-forecasting-mcp = "investment_forecasting.mcp.server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
